--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [platformio]
-#default_envs = openevse
+default_envs = openevse-3ph
 src_dir = firmware/open_evse
 
 [common]
@@ -16,7 +16,7 @@ lib_deps =
 upload_protocol = usbasp
 upload_flags = "-e -B0.5"
 version = 8.2.0
-build_flags = 
+build_flags =
   -D OEV6
   -D RELAY_PWM
   -D SHOW_DISABLED_TESTS
@@ -92,6 +92,17 @@ extends = env:openevse
 src_build_flags=
   ${common.eu_build_flags}
   -D 'VERSION="${common.version}.EU"'
+
+# EU OpenEVSE three-phase
+[env:openevse-3ph]
+extends = env:openevse
+src_build_flags=
+  ${common.eu_build_flags}
+  -D MIN_CURRENT_CAPACITY_FUDGE_AMPS=2
+  -D THREEPHASE_AUTO_SWITCH_MIN_SWITCH_TIME=60000UL
+  -D THREEPHASE
+  -D THREEPHASE_AUTO_SWITCH
+  -D 'VERSION="${common.version}.3PS"'
 
 # Non-tethered T2 EmonEVSE single-phase
 [env:emonevse]
