--- a/platformio.ini
+++ b/platformio.ini
@@ -95,7 +95,7 @@ src_build_flags=
 
 # EU OpenEVSE three-phase
 [env:openevse-3ph]
-extends = env:openevse
+extends = env:openevse_eu
 src_build_flags=
   ${common.eu_build_flags}
   -D MIN_CURRENT_CAPACITY_FUDGE_AMPS=2
