update platformio nomenclature

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,7 +46,7 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
+build_src_flags=
   ${common.us_build_flags}
 
 # Arduino 1.6.23
@@ -57,7 +57,7 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
+build_src_flags=
   ${common.us_build_flags}
 
 [env:openevse_1-8-3]
@@ -67,7 +67,7 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
+build_src_flags=
   ${common.us_build_flags}
 
 [env:openevse_latest]
@@ -77,26 +77,26 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
+build_src_flags=
   ${common.us_build_flags}
 
 [env:openevse]
 extends = env:openevse_1-8-3
-src_build_flags=
+build_src_flags=
   ${common.us_build_flags}
   -D 'VERSION="${common.version}"'
 
 # EU OpenEVSE
 [env:openevse_eu]
 extends = env:openevse
-src_build_flags=
+build_src_flags=
   ${common.eu_build_flags}
   -D 'VERSION="${common.version}.EU"'
 
 # Non-tethered T2 EmonEVSE single-phase
 [env:emonevse]
 extends = env:openevse
-src_build_flags=
+build_src_flags=
   ${common.eu_build_flags}
   -D PP_AUTO_AMPACITY
   -D 'VERSION="${common.version}.T2"'
@@ -104,7 +104,7 @@ src_build_flags=
 # Non-tethered T2 EmonEVSE three-phase
 [env:emonevse_3ph]
 extends = env:openevse
-src_build_flags=
+build_src_flags=
   ${common.eu_build_flags}
   -D PP_AUTO_AMPACITY
   -D THREEPHASE
