set overcurrent threshold

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ lib_deps =
 upload_protocol = usbasp
 upload_flags = "-e -B0.5"
 version = 8.2.1
-build_flags = 
+build_flags =
   -D OEV6
   -D RELAY_PWM
   -D SHOW_DISABLED_TESTS
@@ -37,6 +37,8 @@ eu_build_flags =
   -D PERIODIC_LCD_REFRESH_MS=120000UL
   -D DEFAULT_CURRENT_CAPACITY_L2=32
   -D MAX_CURRENT_CAPACITY_L2=32
+  -D OVERCURRENT_THRESHOLD=5
+  -D OVERCURRENT_TIMEOUT=10000UL
 
 # Arduino 1.6.17 - requires Python 2
 [env:openevse_1-6-17]
