enable button for EU and EmonEVSE, bump 8.2.2

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ src_dir = firmware/open_evse
 lib_deps =
 upload_protocol = usbasp
 upload_flags = "-e -B0.5"
-version = 8.2.1
+version = 8.2.2
 build_flags =
   -D OEV6
   -D RELAY_PWM
@@ -39,6 +39,7 @@ eu_build_flags =
   -D MAX_CURRENT_CAPACITY_L2=32
   -D OVERCURRENT_THRESHOLD=5
   -D OVERCURRENT_TIMEOUT=10000UL
+  -D BTN_MENU
 
 
 # Arduino 1.6.17 - requires Python 2
